manifests/test-000/gatewayclass.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: clusterip-gw
spec:
  controllerName: grosskur.github.io/clusterip-gw
